feat: add solutions to lc problem: No.0015
No.0015.3Sum