@@ -9,18 +9,19 @@ class Solution {
             }
             int j = i + 1, k = n - 1;
             while (j < k) {
-                if (nums[i] + nums[j] + nums[k] == 0) {
-                    ans.add(Arrays.asList(nums[i], nums[j++], nums[k--]));
-                    while (j < n && nums[j] == nums[j - 1]) {
+                int x = nums[i] + nums[j] + nums[k];
+                if (x < 0) {
+                    ++j;
+                } else if (x > 0) {
+                    --k;
+                } else {
+                    ans.add(List.of(nums[i], nums[j++], nums[k--]));
+                    while (j < k && nums[j] == nums[j - 1]) {
                         ++j;
                     }
-                    while (k > j && nums[k] == nums[k + 1]) {
+                    while (j < k && nums[k] == nums[k + 1]) {
                         --k;
                     }
-                } else if (nums[i] + nums[j] + nums[k] < 0) {
-                    ++j;
-                } else {
-                    --k;
                 }
             }
         }
